# ceres

./: .gitignore  Cargo.toml  flake.nix
ceres-binaries/: Cargo.toml
ceres-core/: Cargo.toml
ceres-core/src/: compiler.rs  error.rs  evloop.rs  lib.rs
ceres-core/src/lua/: compiler.rs  fs.rs  launcher.rs  macros.rs  mod.rs  mpq.rs  object.rs  util.rs
ceres-data/: Cargo.toml  build.rs
ceres-formats/: Cargo.toml
ceres-formats/src/: lib.rs  metadata.rs  object.rs  objectstore.rs
ceres-formats/src/parser/: profile.rs  slk.rs  w3obj.rs
