[package]
name = "ceres-binaries"
version = "0.1.0-INTERNAL"
authors = ["mori"]
edition = "2021"

[dependencies]
ceres-parsers = {path = "../ceres-parsers"}
ceres-formats = {path = "../ceres-formats"}
ceres-core = {path = "../ceres-core"}

serde = "1.0.216"
pest = "2.7.15"
mlua = { version = "0.10.2", features = ["lua51", "vendored", "error-send"] }
ron = "0.8.1"
bincode = "1.3.3"
anyhow = "1.0.94"
dotenv = "0.15.0"
clap = "2.33.0"
