[package]
name = "ceres-core"
version = "0.1.0-INTERNAL"
authors = ["mori"]
edition = "2018"

[dependencies]
pest = "2.7.15"
mlua = { version = "0.10.2", features = ["lua51", "vendored", "error-send"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
toml = "0.8.19"
indexmap = "2.7.0"
walkdir = "2.5.0"
itertools = "0.13.0"
path-absolutize = "3.1.1"
atoi = "2.0.0"
notify = "4.0.15"

# error handling
thiserror = "2.0.8"
anyhow = "1.0.94"

# internal
ceres-mpq = "0.1.8"
ceres-formats = {path = "../ceres-formats"}
ceres-parsers = {path = "../ceres-parsers"}
ceres-data = {path = "../ceres-data"}
