[package]
name = "ceres-formats"
version = "0.1.0-INTERNAL"
edition = "2018"

[dependencies]

# util
lazy_static = "1.5.0"
atoi = "2.0.0"
indexmap = "2.7.0"
slotmap = { version = "1.0.7", features = ["serde"] }
num-traits = "0.2.19"
bitflags = "2.6.0"

# parsing/casting
byteorder = "1.5.0"
byte-slice-cast = "1.2.2"
serde = { version = "1.0.216", features = ["derive", "rc"] }

# lua
mlua = { version = "0.10.2", features = ["lua51", "vendored", "error-send"] }

# error handling
thiserror = "2.0.8"
anyhow = "1.0.94"
